fix carousel alignment issue.

--- a/css/style.css
+++ b/css/style.css
@@ -30,12 +30,6 @@ body {
     --extra-small-text: 14px;
 }
 
-.custom-container {
-    max-width: 1200px;
-    width: 90%;
-    margin: 0 auto;
-}
-
 .btn-custom {
     display: inline-block;
     padding: 0.5em 1.5em;
@@ -140,7 +134,8 @@ body {
 .what-we-do-section-heading {
     display: flex;
     align-items: end;
-    padding: 40px 0;
+    gap: 40px;
+    padding: 40px 210px;
 }
 
 .what-we-do-section-heading div h1,
@@ -158,10 +153,9 @@ body {
     overflow-x: auto;
     scroll-snap-type: x mandatory;
     scroll-behavior: smooth;
-    width: calc(100% - 150px);
     white-space: nowrap;
-    margin-left: 150px;
     box-sizing: border-box;
+    margin-left: 210px;
 }
 
 .carousel-content {
@@ -249,7 +243,7 @@ body {
 .bullets {
     display: flex;
     justify-content: flex-start;
-    padding: 40px 0;
+    padding: 40px 0 40px 210px;
 }
 
 .bullet {
@@ -642,13 +636,16 @@ body {
     #what-we-do {
         padding: 0 15px;
     }
-    .what-we-do-section-heading p {
-        width: 350px;
-    }
     .what-we-do-section-heading {
         display: flex;
         flex-direction: column;
         align-items: self-start;
+        padding-left: 0;
+        padding-right: 0;
+        gap: 10px;
+    }
+    .what-we-do-section-heading p {
+        width: 350px;
     }
     .what-we-do-section-heading p {
         width: 300px;
@@ -656,6 +653,10 @@ body {
     .carousel {
         margin-left: 0;
         width: 100%;
+    }
+    .bullets {
+        padding-left: 0;
+        padding-right: 0;
     }
     /* our projects */
     .our-projects-content {
@@ -712,13 +713,13 @@ body {
     #what-we-do {
         padding: 0 15px;
     }
-    .what-we-do-section-heading p {
-        width: 450px;
-    }
     .what-we-do-section-heading {
         display: flex;
         flex-direction: column;
         align-items: self-start;
+        padding-left: 0;
+        padding-right: 0;
+        gap: 10px;
     }
     .what-we-do-section-heading p {
         width: 400px;
@@ -726,6 +727,10 @@ body {
     .carousel {
         margin-left: 0;
         width: 100%;
+    }
+    .bullets {
+        padding-left: 0;
+        padding-right: 0;
     }
     /* our projects */
     .our-projects-content {
@@ -782,13 +787,13 @@ body {
     #what-we-do {
         padding: 0 15px;
     }
-    .what-we-do-section-heading p {
-        width: 450px;
-    }
     .what-we-do-section-heading {
         display: flex;
         flex-direction: column;
         align-items: self-start;
+        padding-left: 0;
+        padding-right: 0;
+        gap: 10px;
     }
     .what-we-do-section-heading p {
         width: 400px;
@@ -796,6 +801,10 @@ body {
     .carousel {
         margin-left: 0;
         width: 100%;
+    }
+    .bullets {
+        padding-left: 0;
+        padding-right: 0;
     }
     /* our projects */
     .our-projects-content {
